--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ description = "A binary serialization / deserialization strategy and implementat
 
 [dependencies]
 rustc-serialize = "*"
-byteorder = "*"
+byteorder = "0.2.9"
