--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ env:
   - secure: SZSxNqg9wiGx8EnJhifJ2kb/aCRcLim9TzTQyfurPqd8qVGkDOeVjTtbs+VTxLVXYtMJAz+YYnrQDwsu8kc/uYpQajU+gRMqNGEP5gNj3Ha5iNGDasAS6piIHQSMROayZ+D9g22nlGnjk8t9eZtLHC/Z8IWMCnjcIHvqMFY6cgI=
 
 install:
-    - curl https://sh.rustup.rs -sSf | sh -s -- --yes
-    - export PATH=$PATH:$HOME/.cargo/bin
+    - curl https://sh.rustup.rs -sSf > ./rustup.sh
+    - chmod +x ./rustup.sh
+    - yes | ./rustup.sh
 
 script:
     - rustup default $CHANNEL
