--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ env:
   - secure: SZSxNqg9wiGx8EnJhifJ2kb/aCRcLim9TzTQyfurPqd8qVGkDOeVjTtbs+VTxLVXYtMJAz+YYnrQDwsu8kc/uYpQajU+gRMqNGEP5gNj3Ha5iNGDasAS6piIHQSMROayZ+D9g22nlGnjk8t9eZtLHC/Z8IWMCnjcIHvqMFY6cgI=
 
 install:
-    - curl https://sh.rustup.rs -sSf > ./rustup.sh
+    - curl -sf https://raw.githubusercontent.com/brson/multirust/master/blastoff.sh > ./rustup.sh
     - chmod +x ./rustup.sh
-    - yes | ./rustup.sh
+    - ./rustup.sh --yes
 
 script:
-    - rustup default $CHANNEL
+    - multirust default $CHANNEL
     - cargo build
     - if [ $CHANNEL = 'nightly' ] ; then cargo test ; fi
