--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ num-traits = "0.1.32"
 serde = { version = "0.7.*", optional = true }
 
 [dev-dependencies]
-serde_macros = "0.7.*"
+serde_macros = "0.7.8"
 
 [features]
 default = ["rustc-serialize", "serde"]
