--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ description = "A binary serialization / deserialization strategy that uses Serde
 [dependencies]
 byteorder = "1.0.0"
 num-traits = "0.1.32"
-serde = { git = "https://github.com/serde-rs/serde", branch = "1.0" }
+serde = { git = "https://github.com/serde-rs/serde", branch = "master" }
 
 [dev-dependencies]
-serde_bytes = { git = "https://github.com/serde-rs/bytes", branch = "1.0" }
-serde_derive = { git = "https://github.com/serde-rs/serde", branch = "1.0" }
+serde_bytes = { git = "https://github.com/serde-rs/bytes", branch = "master" }
+serde_derive = { git = "https://github.com/serde-rs/serde", branch = "master" }
