--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ description = "A binary serialization / deserialization strategy that uses Serde
 [dependencies]
 byteorder = "1.0.0"
 num-traits = "0.1.32"
-serde = "1.0.*"
+serde = "1.*.*"
 
 [dev-dependencies]
 serde_bytes = "0.10.*"
-serde_derive = "1.0.*"
+serde_derive = "1.*.*"
