--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
 name = "bincode"
-version = "0.8.1"
+version = "0.9.0"
 authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "David Tolnay <dtolnay@gmail.com>", "Daniel Griffen"]
 
-# Adding ErrorKind::Invalid*Encoding is a breaking change
-# Adding ErrorKind::DeserializeAnyNotSupported is a breaking change
-publish = false
+publish = true
 
 repository = "https://github.com/TyOverby/bincode"
 documentation = "https://docs.rs/bincode"
