--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,11 @@ description = "A binary serialization / deserialization strategy that uses Serde
 
 [dependencies]
 byteorder = "1.2.0"
-serde = "^1.0.27"
+serde = "^1.0.63"
 
 [dev-dependencies]
 serde_bytes = "^0.10.3"
 serde_derive = "^1.0.27"
 
+[features]
+i128 = ["byteorder/i128"]
