Test only compilation on rust 1.18
This is bincode's current minimum supported Rust version but we have
dev-dependencies that require a newer version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,10 @@ rust:
     - stable
     - beta
     - nightly
-    - 1.18.0
+
+script: cargo test
+
+matrix:
+  include:
+    - rust: 1.18.0
+      script: cargo build
