--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ rust:
     - beta
     - nightly
 
-script: cargo test
+script:
+  - cargo test
+  - cargo test --features "varint"
 
 matrix:
   include:
