--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ license = "MIT"
 description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"
 
 [dependencies]
-byteorder = "1.3.0"
-serde = "1.0.63"
+byteorder = { version = "1.3.0", default-features = false }
+serde = { version = "1.0.63", default-features = false }
 
 [dev-dependencies]
 serde_bytes = "0.11"
@@ -29,6 +29,9 @@ serde_derive = "1.0.27"
 # and targets that support it. The feature will be removed if and when a new
 # major version is released.
 i128 = []
+default = ["std"]
+std = ["byteorder/std", "serde/std"]
+alloc = ["serde/alloc"]
 
 [badges]
 travis-ci = { repository = "servo/bincode" }
