--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,20 +15,11 @@ keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
 license = "MIT"
 description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"
 
+edition = "2018"
 [dependencies]
-byteorder = ">=1.3.0, < 1.4.0"
+byteorder = "1.3.0"
 serde = "1.0.63"
 
 [dev-dependencies]
 serde_bytes = "0.11"
 serde_derive = "1.0.27"
-
-[features]
-# This feature is no longer used and is DEPRECATED. This crate relies on the
-# serde `serde_if_integer128` macro to enable i128 support for Rust compilers
-# and targets that support it. The feature will be removed if and when a new
-# major version is released.
-i128 = []
-
-[badges]
-travis-ci = { repository = "servo/bincode" }
