--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "bincode"
 version = "2.0.0-dev" # remember to update html_root_url
-authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "David Tolnay <dtolnay@gmail.com>", "Zoey Riordan <zoey@dos.cafe>"]
-exclude = ["logo.png", "examples/*", ".gitignore", ".travis.yml"]
+authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "Zoey Riordan <zoey@dos.cafe>"]
+exclude = ["logo.png", "examples/*", ".gitignore", ".github/"]
 
 publish =  true
 
@@ -13,13 +13,6 @@ categories = ["encoding", "network-programming"]
 keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
 
 license = "MIT"
-description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"
+description = "A binary serialization / deserialization strategy for transforming structs into bytes and vice versa!"
 
 edition = "2018"
-[dependencies]
-byteorder = "1.3.0"
-serde = "1.0.63"
-
-[dev-dependencies]
-serde_bytes = "0.11"
-serde_derive = "1.0.27"
