Exclude derive from coverage

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -156,7 +156,8 @@
           "name": "Run cargo-tarpaulin",
           "uses": "actions-rs/tarpaulin@v0.1",
           "with": {
-            "version": "0.18.2"
+            "version": "0.18.2",
+            "args": "--exclude-files derive/"
           }
         },
         {
