Added support for slices, str, fixed size arrays. Added lifetime to Decode trait

--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -13,4 +13,4 @@ proc-macro2 = "1.0"
 [dependencies.syn]
 version = "1.0.74"
 default-features = false
-features  = ["parsing", "derive", "proc-macro", "printing"]
+features  = ["parsing", "derive", "proc-macro", "printing", "clone-impls"]
