--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -162,7 +162,7 @@
           "uses": "actions-rs/tarpaulin@v0.1",
           "with": {
             "version": "0.18.2",
-            "args": "--exclude-files derive/"
+            "args": "--all"
           }
         },
         {
