--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,7 +25,7 @@
             "stable",
             "beta",
             "nightly",
-            "1.41.0"
+            # "1.55.0" TODO: Pick latest stable version when we release 2.0
           ]
         }
       },
