--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "bincode_derive"
 version = "2.0.0-dev" # remember to update bincode
+authors = ["Zoey Riordan <zoey@dos.cafe>", "Victor Koenders <bincode@trangar.com>"]
 edition = "2018"
+
+repository = "https://github.com/bincode-org/bincode"
+documentation = "https://docs.rs/bincode_derive"
+readme = "./readme.md"
+categories = ["encoding", "network-programming"]
+keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
 
 [lib]
 proc-macro = true
