Made the test stage throw an error on warnings

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -100,7 +100,10 @@
         },
         {
           "run": "cargo test-all-features",
-          "name": "Run `cargo test` on all features"
+          "name": "Run `cargo test` on all features",
+          "env": {
+            "RUSTFLAGS": "-D warnings"
+          }
         }
       ]
     },
