--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ derive = ["bincode_derive"]
 bincode_derive = { path = "derive", version = "2.0.0-dev", optional = true }
 serde = { version = "1.0.130", optional = true }
 
-# Used for derive tests
+# Used for tests
 [dev-dependencies]
 serde_derive = "1.0.130"
 serde_json = "1.0.68"
