--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
 
 [package]
 name = "bincode"
-version = "2.0.0-dev" # remember to update html_root_url and bincode_derive
+version = "2.0.0-alpha.0" # remember to update html_root_url and bincode_derive
 authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "Zoey Riordan <zoey@dos.cafe>", "Victor Koenders <bincode@trangar.com>"]
 exclude = ["logo.svg", "examples/*", ".gitignore", ".github/"]
 
@@ -30,7 +30,7 @@ atomic = []
 derive = ["bincode_derive"]
 
 [dependencies]
-bincode_derive = { path = "derive", version = "2.0.0-dev", optional = true }
+bincode_derive = { path = "derive", version = "2.0.0-alpha.0", optional = true }
 serde = { version = "1.0.130", optional = true }
 
 # Used for tests
