--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -9,6 +9,8 @@ documentation = "https://docs.rs/bincode_derive"
 readme = "./readme.md"
 categories = ["encoding", "network-programming"]
 keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
+license = "MIT"
+description = "Implementation of #[derive(Encode, Decode)] for bincode"
 
 [lib]
 proc-macro = true
