--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,15 +23,20 @@ description = "A binary serialization / deserialization strategy for transformin
 edition = "2021"
 
 [features]
-default = ["std", "derive", "atomic"]
+default = ["std", "derive", "atomic", "serde"] # If you see this in a PR, I've forgotten to remove it
 std = ["alloc"]
 alloc = []
 atomic = []
 derive = ["bincode_derive"]
 
+# BlockedTODO: https://github.com/rust-lang/cargo/issues/8832
+# We really want these features to automatically be enabled when both "serde" and either "alloc"/"std" is enabled
+# But this is currently not possible
+serde = ["std", "serde_incl", "serde_incl/std"]
+
 [dependencies]
 bincode_derive = { path = "derive", version = "2.0.0-alpha.0", optional = true }
-serde = { version = "1.0.130", optional = true }
+serde_incl = { package = "serde", version = "1.0.130", optional = true }
 
 # Used for tests
 [dev-dependencies]
