Made serde able to be used with alloc and no_std targets

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -85,7 +85,11 @@
             "alloc,derive",
             "std",
             "std,derive",
+            "serde_no_std",
+            "serde_alloc",
             "serde",
+            "serde_no_std,derive",
+            "serde_alloc,derive",
             "serde,derive"
           ]
         }
