--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,19 +30,23 @@ atomic = []
 derive = ["bincode_derive"]
 
 # BlockedTODO: https://github.com/rust-lang/cargo/issues/8832
-# We really want these features to automatically be enabled when both "serde" and either "alloc"/"std" is enabled
-# But this is currently not possible
-serde = ["std", "serde_incl", "serde_incl/std"]
+# We want to enable these features automatically based on "alloc" or "std"
+#   std = ["alloc", "serde?/std"]
+#   alloc = ["serde?/alloc"]
+# now we have to do this hack:
+serde = ["serde_incl/std", "std", "serde_alloc"] # std
+serde_alloc = ["serde_incl/alloc", "alloc"] # alloc
+serde_no_std = ["serde_incl"] # no_std
 
 [dependencies]
 bincode_derive = { path = "derive", version = "2.0.0-beta.0", optional = true }
-serde_incl = { package = "serde", version = "1.0.130", optional = true }
+serde_incl = { package = "serde", version = "1.0", default-features = false, optional = true }
 
 # Used for tests
 [dev-dependencies]
-serde_derive = "1.0.130"
-serde_json = "1.0.68"
-tempfile = "3.2.0"
+serde_derive = "1.0"
+serde_json = { version = "1.0", default-features = false }
+tempfile = "3.2"
 criterion = "0.3"
 rand = "0.8"
 uuid = { version = "0.8", features = ["serde"] }
