Added a guide on how to migrate from bincode 1 to 2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ criterion = "0.3"
 rand = "0.8"
 uuid = { version = "0.8", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
+bincode_1 = { version = "1", package = "bincode" }
 
 [[bench]]
 name = "varint"
