Run code coverage on all features

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -180,7 +180,7 @@ fi",
           "uses": "actions-rs/tarpaulin@v0.1",
           "with": {
             "version": "0.18.2",
-            "args": "--all"
+            "args": "--all --all-features"
           }
         },
         {
