--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
-    "derive"
+    "derive",
+    "compatibility"
 ]
 
 [package]
@@ -51,7 +52,6 @@ criterion = "0.3"
 rand = "0.8"
 uuid = { version = "0.8", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
-bincode1 = { version = "1.0", package = "bincode" }
 
 [[bench]]
 name = "varint"
