--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -10,6 +10,8 @@ cargo-fuzz = true
 
 [dependencies]
 libfuzzer-sys = "0.4"
+bincodev1 = {package = "bincode", version = "1.3.3"}
+serde = { version = "1.0.135", features = ["derive"] }
 
 [dependencies.bincode]
 path = ".."
