Revert round trip test (add recursion to it too)

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -25,3 +25,9 @@ name = "roundtrip"
 path = "fuzz_targets/roundtrip.rs"
 test = false
 doc = false
+
+[[bin]]
+name = "compat"
+path = "fuzz_targets/compat.rs"
+test = false
+doc = false
