Added a CI step to run the compatibility tests

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -158,6 +158,33 @@ fi",
         }
       ]
     },
+    "compatibility": {
+      "name": "Compatibility",
+      "runs-on": "ubuntu-latest",
+      "steps": [
+        {
+          "uses": "actions/checkout@v2",
+          "name": "Checkout"
+        },
+        {
+          "uses": "actions-rs/toolchain@v1",
+          "with": {
+            "profile": "minimal",
+            "toolchain": "stable",
+            "override": true,
+          },
+          "name": "Install Rust stable"
+        },
+        {
+          "uses": "actions-rs/cargo@v1",
+          "with": {
+            "command": "test",
+            "args": "--manifest-path compatibility/Cargo.toml"
+          },
+          "name": "Run compatibility tests"
+        }
+      ]
+    },
     "coverage": {
       "name": "Code Coverage",
       "runs-on": "ubuntu-latest",
