--- a/.github/workflows/cross_platform.yml
+++ b/.github/workflows/cross_platform.yml
@@ -17,15 +17,41 @@
   },
   "jobs": {
     "check": {
-      "name": "Check",
+      "name": "Test",
       "runs-on": "ubuntu-latest",
       "strategy": {
         "fail-fast": false,
         "matrix": {
           "platforms": [
-            "riscv32imac-unknown-none-elf",
-            "wasm32-unknown-unknown",
-            "i686-unknown-linux-gnu"
+            "aarch64-unknown-linux-gnu",
+            "aarch64-unknown-linux-musl",
+            "arm-unknown-linux-gnueabi",
+            "arm-unknown-linux-gnueabihf",
+            "arm-unknown-linux-musleabi",
+            "arm-unknown-linux-musleabihf",
+            "armv5te-unknown-linux-gnueabi",
+            "armv5te-unknown-linux-musleabi",
+            "armv7-unknown-linux-gnueabihf",
+            "armv7-unknown-linux-musleabihf",
+            "i586-unknown-linux-gnu",
+            "i586-unknown-linux-musl",
+            "i686-pc-windows-gnu",
+            "i686-unknown-linux-gnu",
+            "i686-unknown-linux-musl",
+            "mips-unknown-linux-gnu",
+            "mips-unknown-linux-musl",
+            "mips64-unknown-linux-gnuabi64",
+            "mips64el-unknown-linux-gnuabi64",
+            "mipsel-unknown-linux-gnu",
+            "mipsel-unknown-linux-musl",
+            "powerpc-unknown-linux-gnu",
+            "powerpc64-unknown-linux-gnu",
+            "powerpc64le-unknown-linux-gnu",
+            "riscv64gc-unknown-linux-gnu",
+            "sparc64-unknown-linux-gnu",
+            "x86_64-pc-windows-gnu",
+            "x86_64-unknown-linux-gnu",
+            "x86_64-unknown-linux-musl",
           ]
         }
       },
