--- a/.github/workflows/cross_platform.yml
+++ b/.github/workflows/cross_platform.yml
@@ -16,32 +16,52 @@
     }
   },
   "jobs": {
-    "check": {
-      "name": "Test",
+    "test_cross": {
+      "name": "Cross platform test",
       "runs-on": "ubuntu-latest",
       "strategy": {
         "fail-fast": false,
         "matrix": {
           "platform": [
-            "aarch64-unknown-linux-gnu",
+            "aarch64-unknown-linux-musl",
+            "arm-linux-androideabi",
             "arm-unknown-linux-gnueabi",
             "arm-unknown-linux-gnueabihf",
-            # "armv5te-unknown-linux-gnueabi",
+            "arm-unknown-linux-musleabi",
+            "arm-unknown-linux-musleabihf",
+            "armv5te-unknown-linux-gnueabi",
+            "armv5te-unknown-linux-musleabi",
+            "armv7-linux-androideabi",
             "armv7-unknown-linux-gnueabihf",
+            "armv7-unknown-linux-musleabihf",
+            "asmjs-unknown-emscripten",
             "i586-unknown-linux-gnu",
-            # "i686-pc-windows-gnu",
+            "i586-unknown-linux-musl",
+            "i686-linux-android",
             "i686-unknown-linux-gnu",
-            # "mips-unknown-linux-gnu",
+            "i686-unknown-linux-musl",
+            "mips-unknown-linux-gnu",
+            "mips-unknown-linux-musl",
             "mips64-unknown-linux-gnuabi64",
             "mips64el-unknown-linux-gnuabi64",
-            # "mipsel-unknown-linux-gnu",
-            # "powerpc-unknown-linux-gnu",
-            # "powerpc64-unknown-linux-gnu",
-            # "powerpc64le-unknown-linux-gnu",
+            "mipsel-unknown-linux-gnu",
+            "mipsel-unknown-linux-musl",
+            "powerpc-unknown-linux-gnu",
+            "powerpc64le-unknown-linux-gnu",
             "riscv64gc-unknown-linux-gnu",
-            # "sparc64-unknown-linux-gnu",
+            "s390x-unknown-linux-gnu",
+            "sparcv9-sun-solaris",
+            "thumbv6m-none-eabi",
+            "thumbv7em-none-eabi",
+            "thumbv7em-none-eabihf",
+            "thumbv7m-none-eabi",
+            "wasm32-unknown-emscripten",
+            "x86_64-linux-android",
             "x86_64-pc-windows-gnu",
-            "x86_64-unknown-linux-gnu"
+            "x86_64-sun-solaris",
+            "x86_64-unknown-linux-gnu",
+            "x86_64-unknown-linux-musl",
+            "x86_64-unknown-netbsd",
           ]
         }
       },
@@ -68,6 +88,42 @@
         },
         {
           "run": "cross test --target ${{ matrix.platform }}",
+          "name": "Run tests",
+          "env": {
+            "RUSTFLAGS": "-D warnings"
+          }
+        }
+      ]
+    },
+    "test_windows": {
+      "name": "Cross platform test",
+      "runs-on": "windows-latest",
+      "strategy": {
+        "fail-fast": false,
+        "matrix": {
+          "platform": [
+            "i686-pc-windows-gnu",
+            "x86_64-pc-windows-gnu",
+          ]
+        }
+      },
+      "steps": [
+        {
+          "uses": "actions/checkout@v2",
+          "name": "Checkout"
+        },
+        {
+          "uses": "actions-rs/toolchain@v1",
+          "with": {
+            "profile": "minimal",
+            "toolchain": "stable",
+            "target": "${{ matrix.platform }}",
+            "override": true
+          },
+          "name": "Install Rust stable"
+        },
+        {
+          "run": "cargo test --target ${{ matrix.platform }}",
           "name": "Run tests",
           "env": {
             "RUSTFLAGS": "-D warnings"
