--- a/.github/workflows/cross_platform.yml
+++ b/.github/workflows/cross_platform.yml
@@ -34,7 +34,11 @@
             "armv7-linux-androideabi",
             "armv7-unknown-linux-gnueabihf",
             "armv7-unknown-linux-musleabihf",
-            "asmjs-unknown-emscripten",
+
+            # BlockedTODO: https://github.com/chronotope/chrono/issues/674
+            # Fixed in https://github.com/chronotope/chrono/pull/593
+            # "asmjs-unknown-emscripten",
+
             "i586-unknown-linux-gnu",
             "i586-unknown-linux-musl",
             "i686-linux-android",
@@ -47,21 +51,38 @@
             "mipsel-unknown-linux-gnu",
             "mipsel-unknown-linux-musl",
             "powerpc-unknown-linux-gnu",
-            "powerpc64le-unknown-linux-gnu",
+
+            # Seems to have a bug in qemu, where all floats are `0.0` and aren't equal with each other
+            # "powerpc64le-unknown-linux-gnu",
+
             "riscv64gc-unknown-linux-gnu",
             "s390x-unknown-linux-gnu",
-            "sparcv9-sun-solaris",
-            "thumbv6m-none-eabi",
-            "thumbv7em-none-eabi",
-            "thumbv7em-none-eabihf",
-            "thumbv7m-none-eabi",
-            "wasm32-unknown-emscripten",
+
+            # Seems to not be able to link to certain files
+            # - cannot find -lsendfile
+            # - cannot find -llgrp
+            # "sparcv9-sun-solaris",
+
+            # These have no `std`
+            # "thumbv6m-none-eabi",
+            # "thumbv7em-none-eabi",
+            # "thumbv7em-none-eabihf",
+            # "thumbv7m-none-eabi",
+
+            # BlockedTODO: https://github.com/chronotope/chrono/issues/674
+            # Fixed in https://github.com/chronotope/chrono/pull/593
+            # "wasm32-unknown-emscripten",
+
             "x86_64-linux-android",
             "x86_64-pc-windows-gnu",
             "x86_64-sun-solaris",
             "x86_64-unknown-linux-gnu",
             "x86_64-unknown-linux-musl",
-            "x86_64-unknown-netbsd",
+
+            # Seems to immediately bail
+            # error: test failed, to rerun pass '--lib'
+            # could not execute process `...` (never executed)
+            # "x86_64-unknown-netbsd",
           ]
         }
       },
@@ -90,7 +111,8 @@
           "run": "cross test --target ${{ matrix.platform }}",
           "name": "Run tests",
           "env": {
-            "RUSTFLAGS": "-D warnings"
+            "RUSTFLAGS": "-D warnings",
+            "RUST_BACKTRACE": "1",
           }
         }
       ]
