--- a/.github/workflows/cross_platform.yml
+++ b/.github/workflows/cross_platform.yml
@@ -74,7 +74,12 @@
             # "wasm32-unknown-emscripten",
 
             "x86_64-linux-android",
-            "x86_64-sun-solaris",
+
+            # Seems to not be able to link to certain files
+            # - cannot find -lsendfile
+            # - cannot find -llgrp
+            # "x86_64-sun-solaris",
+
             "x86_64-unknown-linux-gnu",
             "x86_64-unknown-linux-musl",
 
