--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ criterion = "0.3"
 rand = "0.8"
 uuid = { version = "0.8", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
+glam = { version="0.20.5", features=["serde"] }
 
 [[bench]]
 name = "varint"
