Made the bash script use bash on windows

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -121,6 +121,7 @@ else\n
   cargo test --no-default-features --features ${{ matrix.features }}\n
 fi",
           "name": "Run `cargo test` on all features",
+          "shell": "bash",
           "env": {
             "RUSTFLAGS": "-D warnings"
           }
