Add a feature to disable extra debug info (#595)
This allows
- More optimization (smallest final binary size)
- No internal code structure leak (no enum name leak).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ default = ["std", "derive"]
 std = ["alloc", "serde?/std"]
 alloc = ["serde?/alloc"]
 derive = ["bincode_derive"]
+no-extra-debug = ["bincode_derive/no-extra-debug"]
 
 [dependencies]
 bincode_derive = { path = "derive", version = "2.0.0-rc.2", optional = true }
