--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,12 @@ default = ["std", "derive"]
 std = ["alloc", "serde?/std"]
 alloc = ["serde?/alloc"]
 derive = ["bincode_derive"]
+smallvec = ["dep:smallvec"]
 
 [dependencies]
 bincode_derive = { path = "derive", version = "2.0.0-rc.2", optional = true }
 serde = { version = "1.0", default-features = false, optional = true }
+smallvec = { version = "1.0", optional = true }
 
 # Used for tests
 [dev-dependencies]
