--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ derive = ["bincode_derive"]
 bincode_derive = { path = "derive", version = "2.0.0-rc.3", optional = true }
 serde = { version = "1.0", default-features = false, optional = true }
 unty = "0.0.3"
+embedded-io = { version = "0.6", default-features = false, optional = true }
 
 # Used for tests
 [dev-dependencies]
