Add (optional) smallvec decode/encode support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,13 @@ default = ["std", "derive"]
 std = ["alloc", "serde?/std"]
 alloc = ["serde?/alloc"]
 derive = ["bincode_derive"]
+smallvec = ["dep:smallvec"]
 
 [dependencies]
 bincode_derive = { path = "derive", version = "2.0.0-rc.3", optional = true }
 serde = { version = "1.0", default-features = false, optional = true }
 unty = "0.0.3"
+smallvec = { version = "1.13.1", default-features = false, optional = true}
 
 # Used for tests
 [dev-dependencies]
